--- a/index.html
+++ b/index.html
@@ -103,36 +103,31 @@
         <div class="screenshot-slider">
           <div class="screenshot-track" id="screenshot-track">
             <div class="screenshot-slide">
-              <div class="phone-mockup">
-                <div class="phone-notch"></div>
+              <div class="screenshot-card">
                 <img src="images/Map_Page.png" alt="Harita ekranı" data-alt-tr="Harita ekranı" data-alt-en="Map screen" width="280" height="560" loading="lazy">
               </div>
               <span class="slide-label" data-tr="Harita" data-en="Map">Harita</span>
             </div>
             <div class="screenshot-slide">
-              <div class="phone-mockup">
-                <div class="phone-notch"></div>
+              <div class="screenshot-card">
                 <img src="images/Home_Page.png" alt="Ana sayfa" data-alt-tr="Ana sayfa" data-alt-en="Home screen" width="280" height="560" loading="lazy">
               </div>
               <span class="slide-label" data-tr="Ana sayfa" data-en="Home">Ana sayfa</span>
             </div>
             <div class="screenshot-slide">
-              <div class="phone-mockup">
-                <div class="phone-notch"></div>
+              <div class="screenshot-card">
                 <img src="images/History_Page.png" alt="Geçmiş" data-alt-tr="Geçmiş" data-alt-en="History" width="280" height="560" loading="lazy">
               </div>
               <span class="slide-label" data-tr="Geçmiş" data-en="History">Geçmiş</span>
             </div>
             <div class="screenshot-slide">
-              <div class="phone-mockup">
-                <div class="phone-notch"></div>
+              <div class="screenshot-card">
                 <img src="images/Profile_Page.png" alt="Profil" data-alt-tr="Profil" data-alt-en="Profile" width="280" height="560" loading="lazy">
               </div>
               <span class="slide-label" data-tr="Profil" data-en="Profile">Profil</span>
             </div>
             <div class="screenshot-slide">
-              <div class="phone-mockup">
-                <div class="phone-notch"></div>
+              <div class="screenshot-card">
                 <img src="images/Share_Preview.png" alt="Paylaşım önizlemesi" data-alt-tr="Paylaşım önizlemesi" data-alt-en="Share preview" width="280" height="560" loading="lazy">
               </div>
               <span class="slide-label" data-tr="Paylaşım" data-en="Share">Paylaşım</span>
