yakında texti düzeltildi

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </p>
         <div class="cta-wrap animate-in animate-in-3">
           <a href="#" class="cta" id="play-store-link" data-tr="Play Store'dan İndir" data-en="Download on Play Store">Play Store'dan İndir</a>
-          <span class="store-note" data-tr="Android'de yakında" data-en="Coming soon on Android">Android'de yakında</span>
+          <span class="store-note" data-tr="App Store'da yakında" data-en="Coming soon on the App Store">App Store'da yakında</span>
         </div>
       </section>
     </div>
