Add cache control meta tags to HTML files and update service worker cache version

--- a/gizlilik.html
+++ b/gizlilik.html
@@ -10,6 +10,9 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#0d9488">
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Expires" content="0">
 </head>
 <body class="privacy-page">
   <header class="site-header">
