Update footer links to include Turkish terms of use and English terms, and add corresponding files to service worker cache

--- a/gizlilik.html
+++ b/gizlilik.html
@@ -81,6 +81,10 @@
         <span class="sep">·</span>
         <a href="privacy.html">Privacy (EN)</a>
         <span class="sep">·</span>
+        <a href="kullanim-kosullari.html">Kullanım koşulları (TR)</a>
+        <span class="sep">·</span>
+        <a href="terms.html">Terms (EN)</a>
+        <span class="sep">·</span>
         <a href="mailto:zoneruun@gmail.com">İletişim</a>
       </div>
       <p class="copy">ZoneRun © <span id="year">2025</span></p>
