--- a/index.html
+++ b/index.html
@@ -184,13 +184,13 @@
         <span class="sep">·</span>
         <a href="privacy.html">Privacy (EN)</a>
         <span class="sep">·</span>
+        <a href="kullanim-kosullari.html" data-tr="Kullanım Koşulları" data-en="Terms of Use">Kullanım Koşulları</a>
+        <span class="sep">·</span>
+        <a href="terms.html">Terms (EN)</a>
+        <span class="sep">·</span>
         <a href="#sss" data-tr="SSS" data-en="FAQ">SSS</a>
         <span class="sep">·</span>
         <a href="mailto:zoneruun@gmail.com" data-tr="İletişim" data-en="Contact">İletişim</a>
-        <span class="sep">·</span>
-        <a href="#" data-lang="tr">TR</a>
-        <span class="sep">·</span>
-        <a href="#" data-lang="en">EN</a>
       </div>
       <p class="copy">ZoneRun © <span id="year">2025</span></p>
     </footer>
