site uzantı isimleri düzeltildi

--- a/gizlilik/index.html
+++ b/gizlilik/index.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="ZoneRun Gizlilik Politikası – Toplanan veriler, kullanım amacı, saklama ve güvenlik.">
   <title>ZoneRun Gizlilik Politikası</title>
-  <link rel="alternate" hreflang="tr" href="https://zonerun.github.io/ZoneRun_WebSitesi/gizlilik.html">
-  <link rel="alternate" hreflang="en" href="https://zonerun.github.io/ZoneRun_WebSitesi/privacy.html">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="manifest" href="manifest.json">
+  <link rel="alternate" hreflang="tr" href="https://zonerun.github.io/ZoneRun_WebSitesi/gizlilik">
+  <link rel="alternate" hreflang="en" href="https://zonerun.github.io/ZoneRun_WebSitesi/privacy">
+  <link rel="stylesheet" href="../css/style.css">
+  <link rel="manifest" href="../manifest.json">
   <meta name="theme-color" content="#0d9488">
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
   <meta http-equiv="Pragma" content="no-cache">
@@ -16,8 +16,8 @@
 </head>
 <body class="privacy-page">
   <header class="site-header">
-    <a href="index.html" class="site-logo">
-      <img src="images/Main_Logo.jpg" alt="ZoneRun" class="site-logo-img" width="36" height="36">
+    <a href="../" class="site-logo">
+      <img src="../images/Main_Logo.jpg" alt="ZoneRun" class="site-logo-img" width="36" height="36">
       <span>ZoneRun</span>
     </a>
     <div class="header-actions">
@@ -26,14 +26,14 @@
         <span class="icon-dark" aria-hidden="true"><svg fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z"/></svg></span>
       </button>
       <nav class="lang-nav" aria-label="Dil seçimi">
-        <a href="gizlilik.html" aria-current="page">TR</a>
-        <a href="privacy.html">EN</a>
+        <a href="../gizlilik/" aria-current="page">TR</a>
+        <a href="../privacy/">EN</a>
       </nav>
     </div>
   </header>
 
   <main class="main">
-    <a href="index.html" class="back">← Ana sayfa</a>
+    <a href="../">← Ana sayfa</a>
     <article class="privacy">
       <h1 class="page-title">ZoneRun Gizlilik Politikası</h1>
       <p class="last-updated">Son güncelleme: 28 Şubat 2025</p>
@@ -68,28 +68,28 @@
       <p>ZoneRun belirli bir yaş grubuna yönelik olarak tasarlanmamıştır. Uygulamanın küçük yaştaki kullanıcılar açısından uygunluğu ebeveyn veya vasi sorumluluğundadır.</p>
 
       <h2>7. Değişiklikler</h2>
-      <p>Bu gizlilik politikası güncellendiğinde, bu sayfa ve “son güncelleme” tarihi güncellenecektir. Önemli değişiklikler uygulama veya e-posta ile duyurulabilir.</p>
+      <p>Bu gizlilik politikası güncellendiğinde, bu sayfa ve "son güncelleme" tarihi güncellenecektir. Önemli değişiklikler uygulama veya e-posta ile duyurulabilir.</p>
 
       <h2>8. İletişim</h2>
       <p>Gizlilik ve veri talepleri için: <a href="mailto:zoneruun@gmail.com">zoneruun@gmail.com</a></p>
     </article>
     <footer class="site-footer">
       <div class="site-footer-inner">
-        <a href="index.html">Ana sayfa</a>
+        <a href="../">Ana sayfa</a>
         <span class="sep">·</span>
-        <a href="gizlilik.html">Gizlilik (TR)</a>
+        <a href="../gizlilik/">Gizlilik (TR)</a>
         <span class="sep">·</span>
-        <a href="privacy.html">Privacy (EN)</a>
+        <a href="../privacy/">Privacy (EN)</a>
         <span class="sep">·</span>
-        <a href="kullanim-kosullari.html">Kullanım koşulları (TR)</a>
+        <a href="../kullanim-kosullari/">Kullanım koşulları (TR)</a>
         <span class="sep">·</span>
-        <a href="terms.html">Terms (EN)</a>
+        <a href="../terms/">Terms (EN)</a>
         <span class="sep">·</span>
         <a href="mailto:zoneruun@gmail.com">İletişim</a>
       </div>
       <p class="copy">ZoneRun © <span id="year">2025</span></p>
     </footer>
   </main>
-  <script src="js/main.js"></script>
+  <script src="../js/main.js"></script>
 </body>
 </html>
