--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   <header class="site-header">
-    <a href="index.html" class="site-logo">
+    <a href="./" class="site-logo">
       <img src="images/Main_Logo.jpg" alt="ZoneRun" class="site-logo-img" width="36" height="36">
       <span>ZoneRun</span>
     </a>
@@ -180,13 +180,13 @@
 
     <footer class="site-footer">
       <div class="site-footer-inner">
-        <a href="gizlilik.html" data-tr="Gizlilik Politikası" data-en="Privacy Policy">Gizlilik Politikası</a>
+        <a href="gizlilik/" data-tr="Gizlilik Politikası" data-en="Privacy Policy">Gizlilik Politikası</a>
         <span class="sep">·</span>
-        <a href="privacy.html">Privacy (EN)</a>
+        <a href="privacy/">Privacy (EN)</a>
         <span class="sep">·</span>
-        <a href="kullanim-kosullari.html" data-tr="Kullanım Koşulları" data-en="Terms of Use">Kullanım Koşulları</a>
+        <a href="kullanim-kosullari/" data-tr="Kullanım Koşulları" data-en="Terms of Use">Kullanım Koşulları</a>
         <span class="sep">·</span>
-        <a href="terms.html">Terms (EN)</a>
+        <a href="terms/">Terms (EN)</a>
         <span class="sep">·</span>
         <a href="#sss" data-tr="SSS" data-en="FAQ">SSS</a>
         <span class="sep">·</span>
