--- a/terms/index.html
+++ b/terms/index.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="ZoneRun Terms of Use – Scope of service, acceptable use, disclaimer.">
   <title>ZoneRun Terms of Use</title>
-  <link rel="alternate" hreflang="tr" href="https://zonerun.github.io/ZoneRun_WebSitesi/kullanim-kosullari.html">
-  <link rel="alternate" hreflang="en" href="https://zonerun.github.io/ZoneRun_WebSitesi/terms.html">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="manifest" href="manifest.json">
+  <link rel="alternate" hreflang="tr" href="https://zonerun.github.io/ZoneRun_WebSitesi/kullanim-kosullari">
+  <link rel="alternate" hreflang="en" href="https://zonerun.github.io/ZoneRun_WebSitesi/terms">
+  <link rel="stylesheet" href="../css/style.css">
+  <link rel="manifest" href="../manifest.json">
   <meta name="theme-color" content="#0d9488">
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
   <meta http-equiv="Pragma" content="no-cache">
@@ -16,8 +16,8 @@
 </head>
 <body class="privacy-page">
   <header class="site-header">
-    <a href="index.html" class="site-logo">
-      <img src="images/Main_Logo.jpg" alt="ZoneRun" class="site-logo-img" width="36" height="36">
+    <a href="../" class="site-logo">
+      <img src="../images/Main_Logo.jpg" alt="ZoneRun" class="site-logo-img" width="36" height="36">
       <span>ZoneRun</span>
     </a>
     <div class="header-actions">
@@ -26,62 +26,62 @@
         <span class="icon-dark" aria-hidden="true"><svg fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z"/></svg></span>
       </button>
       <nav class="lang-nav" aria-label="Language">
-        <a href="kullanim-kosullari.html">TR</a>
-        <a href="terms.html" aria-current="page">EN</a>
+        <a href="../kullanim-kosullari/">TR</a>
+        <a href="../terms/" aria-current="page">EN</a>
       </nav>
     </div>
   </header>
 
   <main class="main">
-    <a href="index.html" class="back">← Home</a>
+    <a href="../" class="back">← Home</a>
     <article class="privacy">
       <h1 class="page-title">ZoneRun Terms of Use</h1>
       <p class="last-updated">Last updated: February 28, 2025</p>
 
       <h2>1. Scope of Service</h2>
-      <p>ZoneRun is a mobile application that provides run and map-based area tracking. The service is provided “as is”; all content and features accessible via the app and this website are made available in their current form.</p>
+      <p>ZoneRun is a mobile application that provides run and map-based area tracking. The service is provided "as is"; all content and features accessible via the app and this website are made available in their current form.</p>
 
       <h2>2. Acceptance</h2>
       <p>By using the ZoneRun app or this website, you are deemed to have read, understood, and accepted these Terms of Use. If you do not accept the terms, you must not use the app or the site.</p>
 
       <h2>3. Acceptable Use</h2>
-      <p>The app is for lawful and personal (non-commercial) use only. You must not misuse or falsify location data; interfere with other users’ accounts or data; or engage in behaviour that could harm the app or its infrastructure. Such use may result in partial or full termination of the service.</p>
+      <p>The app is for lawful and personal (non-commercial) use only. You must not misuse or falsify location data; interfere with other users' accounts or data; or engage in behaviour that could harm the app or its infrastructure. Such use may result in partial or full termination of the service.</p>
 
       <h2>4. Account and Data</h2>
-      <p>You are responsible for your account credentials and the security of your account. You may delete your account from within the app. Details on data storage, processing, and deletion are set out in our <a href="privacy.html">Privacy Policy</a>.</p>
+      <p>You are responsible for your account credentials and the security of your account. You may delete your account from within the app. Details on data storage, processing, and deletion are set out in our <a href="../privacy/">Privacy Policy</a>.</p>
 
       <h2>5. Intellectual Property</h2>
       <p>The name ZoneRun, its logo, interface, and related content are owned by the developer. Unauthorised copying, distribution, or commercial use is prohibited.</p>
 
       <h2>6. Disclaimer</h2>
-      <p>Risk arising from running or other physical activity lies with the user. ZoneRun does not provide medical or legal advice. Map and location data are provided “as is”; no guarantee is given as to accuracy or uninterrupted availability.</p>
+      <p>Risk arising from running or other physical activity lies with the user. ZoneRun does not provide medical or legal advice. Map and location data are provided "as is"; no guarantee is given as to accuracy or uninterrupted availability.</p>
 
       <h2>7. Termination</h2>
       <p>Use that violates these terms may result in partial or full termination of the service. You may delete your account at any time from within the app.</p>
 
       <h2>8. Changes</h2>
-      <p>These terms may be updated. When they are, this page and the “last updated” date will be revised; significant changes may be announced in the app or by email.</p>
+      <p>These terms may be updated. When they are, this page and the "last updated" date will be revised; significant changes may be announced in the app or by email.</p>
 
       <h2>9. Contact</h2>
       <p>For questions: <a href="mailto:zoneruun@gmail.com">zoneruun@gmail.com</a></p>
     </article>
     <footer class="site-footer">
       <div class="site-footer-inner">
-        <a href="index.html">Home</a>
+        <a href="../">Home</a>
         <span class="sep">·</span>
-        <a href="gizlilik.html">Gizlilik (TR)</a>
+        <a href="../gizlilik/">Gizlilik (TR)</a>
         <span class="sep">·</span>
-        <a href="privacy.html">Privacy (EN)</a>
+        <a href="../privacy/">Privacy (EN)</a>
         <span class="sep">·</span>
-        <a href="kullanim-kosullari.html">Kullanım koşulları (TR)</a>
+        <a href="../kullanim-kosullari/">Kullanım koşulları (TR)</a>
         <span class="sep">·</span>
-        <a href="terms.html">Terms (EN)</a>
+        <a href="../terms/">Terms (EN)</a>
         <span class="sep">·</span>
         <a href="mailto:zoneruun@gmail.com">Contact</a>
       </div>
       <p class="copy">ZoneRun © <span id="year">2025</span></p>
     </footer>
   </main>
-  <script src="js/main.js"></script>
+  <script src="../js/main.js"></script>
 </body>
 </html>
